k8s/08-stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats
  namespace: taskmanager-zankovskiy
  labels:
    app: stats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - name: stats
          image: taskmanager-stats:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 15
