k8s/05-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: taskmanager-zankovskiy
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
