k8s/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: taskmanager-zankovskiy
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
  type: NodePort
