k8s/09-stats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats
  namespace: taskmanager-zankovskiy
spec:
  selector:
    app: stats
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
